@@ -5,6 +5,7 @@ UTIL:
 * type=rule | introduce 'actions=user-replace:OLD-username,NEW-username' and 'actions=user-replace-from-file:FILE.txt'
 * type=rule | implement group-tag usage for actions=display / 'filter=grouptag is TAGNAME'
 * type=device  actions=sp_spg-create-alert-only-bp:true | ironskillet update for panos 10.2
+* type=rule | introduce actions=rule-hit-count-show / rule-hit-count-clear
 
 BUGFIX:
 * type=rule/schedule 'filter=(schedule.expire.in.days > -90) / (expire.in.days > -90) | bugfix for negative numbers
